Restructure project and move to main branch

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     <!-- Company Info -->
                     <div class="footer-section">
                         <div class="footer-logo">
-                            <img src="https://drive.google.com/uc?export=view&id=1xmUjouNnTgYnvAAY5fkDDdc3FhxaVUbx" alt="Nasadef Logo" style="height: 40px; width: auto; margin-bottom: 10px; filter: brightness(0) invert(1);">
+                            <img src="images/logo.png" alt="Nasadef Logo" style="height: 40px; width: auto; margin-bottom: 10px; filter: brightness(0) invert(1);">
                             <p>Innovative IoT & AI Solutions</p>
                         </div>
                         <p class="footer-desc">Menyediakan penyelesaian teknologi terkini untuk keselamatan ladang, pengawasan hidupan liar, dan perkhidmatan AI yang mengoptimumkan operasi anda.</p>
