Add AISA page and update hero section with video background

--- a/index.html
+++ b/index.html
@@ -20,16 +20,25 @@
                 <li><a href="#services">Services</a></li>
                 <li><a href="#leadership">Leadership</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="aisa.html" style="color: #1e3a8a; font-weight: 700;">AISA</a></li>
             </ul>
         </nav>
     </header>
 
     <!-- Hero Section -->
     <section id="home" class="hero">
+        <video autoplay muted loop class="hero-video">
+            <source src="images/hero-bg.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
         <div class="container">
             <h1>Innovative IoT & AI Solutions</h1>
             <p>Nasa Def Sdn Bhd menyediakan penyelesaian teknologi terkini untuk keselamatan ladang, pengawasan hidupan liar, dan perkhidmatan AI yang membantu mengoptimumkan operasi anda.</p>
-            <a href="#contact" class="cta-button">Hubungi Kami</a>
+            <div class="hero-buttons">
+                <a href="#contact" class="cta-button">Hubungi Kami</a>
+                <a href="https://wa.ai-serviceagent.com/auth/google" target="_blank" class="cta-button cta-secondary">Sign Up AISA</a>
+                <a href="https://ai-serviceagent.com" target="_blank" class="cta-button cta-outline">Go to AISA</a>
+            </div>
         </div>
     </section>
 
