Update hero section with shaped video background and modern overlay design

--- a/aisa.html
+++ b/aisa.html
@@ -31,6 +31,12 @@
             <source src="images/hero-bg.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
+        
+        <!-- Floating Decorations -->
+        <div class="hero-decoration"></div>
+        <div class="hero-decoration-2"></div>
+        <div class="hero-decoration-3"></div>
+        
         <div class="container">
             <h1>AISA - AI Service Agent</h1>
             <p>Revolusi customer service dengan AI yang canggih. Automasi penuh untuk WhatsApp, Telegram, dan platform digital lain dengan jawapan pintar dan respons segera 24/7.</p>
