--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
             <source src="images/hero-bg.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
+        
+        <!-- Floating Decorations -->
+        <div class="hero-decoration"></div>
+        <div class="hero-decoration-2"></div>
+        <div class="hero-decoration-3"></div>
+        
         <div class="container">
             <h1>Innovative IoT & AI Solutions</h1>
             <p>Nasa Def Sdn Bhd menyediakan penyelesaian teknologi terkini untuk keselamatan ladang, pengawasan hidupan liar, dan perkhidmatan AI yang membantu mengoptimumkan operasi anda.</p>
