Minor link adjustment - AISA kat footer

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                             <li><a href="#products">Farm Sense</a></li>
                             <li><a href="#products">Farm Guard</a></li>
                             <li><a href="#products">WildSec</a></li>
-                            <li><a href="#products">AISA - AI Agent</a></li>
+                            <li><a href="https://ai-serviceagent.com" target="_blank">AISA - AI Agent</a></li>
                         </ul>
                     </div>
 
