Add favicon.ico to all HTML pages

--- a/aisa.html
+++ b/aisa.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AISA - AI Service Agent | Nasa Def Sdn Bhd</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
@@ -50,7 +51,7 @@
                     <div class="hero-buttons">
                         <a href="https://wa.ai-serviceagent.com/auth/google" target="_blank" class="cta-button cta-secondary">Sign Up Sekarang</a>
                         <a href="index.html#contact" class="cta-button cta-outline">Hubungi Sales</a>
-                        <a href="#features" class="cta-button">Ketahui Lebih Lanjut</a>
+                        <a href="https://ai-serviceagent.com" target="_blank" class="cta-button">Ketahui Lebih Lanjut</a>
                     </div>
                 </div>
             </div>
