--- a/aisa.html
+++ b/aisa.html
@@ -28,8 +28,9 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
-        <video autoplay muted loop class="hero-video">
+        <video autoplay muted loop playsinline class="hero-video" preload="auto">
             <source src="images/hero-bg.mp4" type="video/mp4">
+            <source src="images/hero-bg.webm" type="video/webm">
             Your browser does not support the video tag.
         </video>
         
