Fix video loading timeout issue - prevent premature fallback to background image

--- a/aisa.html
+++ b/aisa.html
@@ -28,7 +28,7 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
-        <video autoplay muted loop playsinline class="hero-video" preload="auto">
+        <video autoplay muted loop playsinline class="hero-video" preload="auto" poster="images/hero-bg.jpg">
             <source src="images/hero-bg.mp4" type="video/mp4">
             <source src="images/hero-bg.webm" type="video/webm">
             Your browser does not support the video tag.
@@ -305,6 +305,45 @@
     </footer>
 
     <script>
+        // Video loading management
+        const video = document.querySelector('.hero-video');
+        const heroSection = document.querySelector('.hero');
+        let videoLoadTimeout;
+
+        function handleVideoSuccess() {
+            console.log('Video loaded successfully');
+            clearTimeout(videoLoadTimeout);
+            video.style.opacity = '1';
+            heroSection.classList.remove('video-fallback');
+        }
+
+        function handleVideoError() {
+            console.log('Video failed to load, using fallback image');
+            video.classList.add('video-failed');
+            heroSection.classList.add('video-fallback');
+        }
+
+        // Set up video event listeners
+        if (video) {
+            video.addEventListener('loadeddata', handleVideoSuccess);
+            video.addEventListener('canplay', handleVideoSuccess);
+            video.addEventListener('error', handleVideoError);
+            
+            // Fallback timeout - if video doesn't load within 3 seconds, use image
+            videoLoadTimeout = setTimeout(() => {
+                if (video.readyState < 2) { // HAVE_CURRENT_DATA
+                    console.log('Video loading timeout, using fallback image');
+                    handleVideoError();
+                }
+            }, 3000);
+            
+            // Try to play video
+            video.play().catch((error) => {
+                console.log('Video autoplay failed:', error);
+                handleVideoError();
+            });
+        }
+
         // Smooth scrolling for navigation links
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
