--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                                 <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.1s" src="images/Move-Sensor.png" style="margin-top: 25%;">
                             </div>
                             <div class="col-6 text-start">
-                                <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.3s" src="img/about-2.jpg">
+                                <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.3s" src="img/about-2.png">
                             </div>
                             <div class="col-6 text-end">
                                 <img class="img-fluid rounded w-50 wow zoomIn" data-wow-delay="0.5s" src="img/about-3.jpg">
@@ -258,7 +258,7 @@
                     <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="room-item shadow rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="img/about-1.jpg" alt="Farm Sense">
+                                <img class="img-fluid" src="img/about-1.png" alt="Farm Sense">
                                 <small class="position-absolute start-0 top-100 translate-middle-y bg-primary text-white rounded py-1 px-3 ms-4">🛡️ Farm Sense</small>
                             </div>
                             <div class="p-4 mt-2">
@@ -288,7 +288,7 @@
                     <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="room-item shadow rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="img/about-2.jpg" alt="Farm Guard">
+                                <img class="img-fluid" src="img/about-2.png" alt="Farm Guard">
                                 <small class="position-absolute start-0 top-100 translate-middle-y bg-primary text-white rounded py-1 px-3 ms-4">🚨 Farm Guard</small>
                             </div>
                             <div class="p-4 mt-2">
