--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                                 <a href="#leadership" class="nav-item nav-link">Leadership</a>
                                 <a href="#contact" class="nav-item nav-link">Contact</a>
                                 <a href="aisa.html" class="nav-item nav-link" style="color: #1e3a8a; font-weight: 700;">AISA</a>
+                                <a href="floodsense.html" class="nav-item nav-link">FloodSense</a>
                             </div>
                             <a href="#contact" class="btn btn-primary rounded-0 py-4 px-md-5 d-none d-lg-block">Contact Us<i class="fa fa-arrow-right ms-3"></i></a>
                         </div>
@@ -173,6 +174,13 @@
                         </div>
                         <div class="col-md-3">
                             <div class="text-center">
+                                <i class="fa fa-tint fa-2x text-primary mb-2"></i>
+                                <h6>FloodSense</h6>
+                                <p class="mb-0">Amaran Awal Banjir Pintar</p>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="text-center">
                                 <i class="fa fa-robot fa-2x text-primary mb-2"></i>
                                 <h6>AISA</h6>
                                 <p class="mb-0">AI Service Agent</p>
@@ -231,7 +239,7 @@
                                 <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.1s" src="images/Move-Sensor.png" style="margin-top: 25%;">
                             </div>
                             <div class="col-6 text-start">
-                                <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.3s" src="img/about-2.png">
+                                <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.3s" src="img/about-2.jpg">
                             </div>
                             <div class="col-6 text-end">
                                 <img class="img-fluid rounded w-50 wow zoomIn" data-wow-delay="0.5s" src="img/about-3.jpg">
@@ -258,7 +266,7 @@
                     <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="room-item shadow rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="img/about-1.png" alt="Farm Sense">
+                                <img class="img-fluid" src="img/about-1.jpg" alt="Farm Sense">
                                 <small class="position-absolute start-0 top-100 translate-middle-y bg-primary text-white rounded py-1 px-3 ms-4">🛡️ Farm Sense</small>
                             </div>
                             <div class="p-4 mt-2">
@@ -288,7 +296,7 @@
                     <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="room-item shadow rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="img/about-2.png" alt="Farm Guard">
+                                <img class="img-fluid" src="img/about-2.jpg" alt="Farm Guard">
                                 <small class="position-absolute start-0 top-100 translate-middle-y bg-primary text-white rounded py-1 px-3 ms-4">🚨 Farm Guard</small>
                             </div>
                             <div class="p-4 mt-2">
@@ -341,6 +349,36 @@
                                 <div class="d-flex justify-content-between">
                                     <a class="btn btn-sm btn-primary rounded py-2 px-4" href="#contact">Maklumat Lanjut</a>
                                     <a class="btn btn-sm btn-warning rounded py-2 px-4" href="#contact">Coming Soon</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                        <div class="room-item shadow rounded overflow-hidden">
+                            <div class="position-relative">
+                                <img class="img-fluid" src="img/about-4.jpg" alt="FloodSense">
+                                <small class="position-absolute start-0 top-100 translate-middle-y bg-info text-white rounded py-1 px-3 ms-4">🌊 FloodSense</small>
+                            </div>
+                            <div class="p-4 mt-2">
+                                <div class="d-flex justify-content-between mb-3">
+                                    <h5 class="mb-0">FloodSense</h5>
+                                    <div class="ps-2">
+                                        <small class="fa fa-star text-primary"></small>
+                                        <small class="fa fa-star text-primary"></small>
+                                        <small class="fa fa-star text-primary"></small>
+                                        <small class="fa fa-star text-primary"></small>
+                                        <small class="fa fa-star text-primary"></small>
+                                    </div>
+                                </div>
+                                <div class="d-flex mb-3">
+                                    <small class="border-end me-3 pe-3"><i class="fa fa-camera text-primary me-2"></i>CCTV Solar</small>
+                                    <small class="border-end me-3 pe-3"><i class="fa fa-tint text-primary me-2"></i>Water Level</small>
+                                    <small><i class="fa fa-bell text-primary me-2"></i>Early Alert</small>
+                                </div>
+                                <p class="text-body mb-3">Smart flood monitoring & early warning system with solar-powered CCTV and water level sensors for disaster management.</p>
+                                <div class="d-flex justify-content-between">
+                                    <a class="btn btn-sm btn-primary rounded py-2 px-4" href="floodsense.html">Maklumat Lanjut</a>
+                                    <a class="btn btn-sm btn-dark rounded py-2 px-4" href="#contact">Tempah Sekarang</a>
                                 </div>
                             </div>
                         </div>
@@ -670,14 +708,14 @@
         <!-- Contact Section End -->
 
         <!-- Footer Start -->
-        <div class="container-fluid bg-dark text-light footer wow fadeIn" data-wow-delay="0.1s" style="margin-top: 50px;">
+        <div class="container-fluid bg-dark text-light footer wow fadeIn" data-wow-delay="0.1s">
             <div class="container pb-5">
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-4">
                         <div class="bg-primary rounded p-4">
                             <a href="index.html"><h1 class="text-white text-uppercase mb-3">Nasa Def</h1></a>
                             <p class="text-white mb-0">
-                                Nasa Def Sdn Bhd provides cutting-edge technology solutions for farm security, wildlife monitoring, and AI services to help optimize your operations.
+                                Innovative IoT & AI Solutions for Agricultural Security and Wildlife Monitoring
                             </p>
                         </div>
                     </div>
@@ -687,9 +725,7 @@
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+6017-4511455</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@nasadef.com.my</p>
                         <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
@@ -697,19 +733,19 @@
                         <div class="row gy-5 g-4">
                             <div class="col-md-6">
                                 <h6 class="section-title text-start text-primary text-uppercase mb-4">Company</h6>
-                                <a class="btn btn-link" href="#about">About Us</a>
-                                <a class="btn btn-link" href="#contact">Contact Us</a>
-                                <a class="btn btn-link" href="#about">Privacy Policy</a>
-                                <a class="btn btn-link" href="#contact">Terms & Conditions</a>
-                                <a class="btn btn-link" href="#contact">Support</a>
+                                <a class="btn btn-link" href="index.html#about">About Us</a>
+                                <a class="btn btn-link" href="index.html#contact">Contact Us</a>
+                                <a class="btn btn-link" href="">Privacy Policy</a>
+                                <a class="btn btn-link" href="">Terms & Condition</a>
+                                <a class="btn btn-link" href="">Support</a>
                             </div>
                             <div class="col-md-6">
-                                <h6 class="section-title text-start text-primary text-uppercase mb-4">Product & Services</h6>
-                                <a class="btn btn-link" href="#services">IoT Development</a>
-                                <a class="btn btn-link" href="#services">AI Solutions</a>
-                                <a class="btn btn-link" href="#services">Farm Security</a>
-                                <a class="btn btn-link" href="#services">Wildlife Monitoring</a>
-                                <a class="btn btn-link" href="#services">Data Analytics</a>
+                                <h6 class="section-title text-start text-primary text-uppercase mb-4">Products</h6>
+                                <a class="btn btn-link" href="index.html#products">Farm Sense</a>
+                                <a class="btn btn-link" href="index.html#products">Farm Guard</a>
+                                <a class="btn btn-link" href="index.html#products">WildSec</a>
+                                <a class="btn btn-link" href="aisa.html">AISA</a>
+                                <a class="btn btn-link" href="floodsense.html">FloodSense</a>
                             </div>
                         </div>
                     </div>
@@ -719,14 +755,12 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">NASADEF</a>, All Right Reserved. 
-                            
-                            <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                            Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
+                            &copy; <a class="border-bottom" href="#">Nasa Def Sdn Bhd</a>, All Right Reserved.
+                            Designed By <a class="border-bottom" href="#">En Nik Shafik</a>
                         </div>
                         <div class="col-md-6 text-center text-md-end">
                             <div class="footer-menu">
-                                <a href="">Home</a>
+                                <a href="index.html">Home</a>
                                 <a href="">Cookies</a>
                                 <a href="">Help</a>
                                 <a href="">FQAs</a>
