--- a/aisa.html
+++ b/aisa.html
@@ -232,7 +232,7 @@
                         <div class="bg-primary rounded p-4">
                             <a href="index.html"><h1 class="text-white text-uppercase mb-3">Nasa Def</h1></a>
                             <p class="text-white mb-0">
-                                Nasa Def Sdn Bhd provides cutting-edge technology solutions for farm security, wildlife monitoring, and AI services to help optimize your operations.
+                                Innovative IoT & AI Solutions for Agricultural Security and Wildlife Monitoring
                             </p>
                         </div>
                     </div>
@@ -242,29 +242,27 @@
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+6017-4511455</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@nasadef.com.my</p>
                         <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-5 col-md-12">
                         <div class="row gy-5 g-4">
                             <div class="col-md-6">
-                                <h6 class="section-title text-start text-primary text-uppercase mb-4">AISA Platform</h6>
-                                <a class="btn btn-link" href="https://ai-serviceagent.com" target="_blank">Go to AISA</a>
-                                <a class="btn btn-link" href="https://wa.ai-serviceagent.com/auth/google" target="_blank">Sign Up Free</a>
+                                <h6 class="section-title text-start text-primary text-uppercase mb-4">Company</h6>
                                 <a class="btn btn-link" href="index.html#about">About Us</a>
                                 <a class="btn btn-link" href="index.html#contact">Contact Us</a>
-                                <a class="btn btn-link" href="index.html#contact">Support</a>
+                                <a class="btn btn-link" href="">Privacy Policy</a>
+                                <a class="btn btn-link" href="">Terms & Condition</a>
+                                <a class="btn btn-link" href="">Support</a>
                             </div>
                             <div class="col-md-6">
-                                <h6 class="section-title text-start text-primary text-uppercase mb-4">Features</h6>
-                                <a class="btn btn-link" href="#features">AI Chatbot</a>
-                                <a class="btn btn-link" href="#features">Multi-Language</a>
-                                <a class="btn btn-link" href="#features">Real-time Analytics</a>
-                                <a class="btn btn-link" href="#features">API Integration</a>
-                                <a class="btn btn-link" href="#features">24/7 Support</a>
+                                <h6 class="section-title text-start text-primary text-uppercase mb-4">Products</h6>
+                                <a class="btn btn-link" href="index.html#products">Farm Sense</a>
+                                <a class="btn btn-link" href="index.html#products">Farm Guard</a>
+                                <a class="btn btn-link" href="index.html#products">WildSec</a>
+                                <a class="btn btn-link" href="aisa.html">AISA</a>
+                                <a class="btn btn-link" href="floodsense.html">FloodSense</a>
                             </div>
                         </div>
                     </div>
@@ -274,14 +272,12 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">NASADEF</a>, All Right Reserved. 
-							
-							<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-							Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
+                            &copy; <a class="border-bottom" href="#">Nasa Def Sdn Bhd</a>, All Right Reserved.
+                            Designed By <a class="border-bottom" href="#">En Nik Shafik</a>
                         </div>
                         <div class="col-md-6 text-center text-md-end">
                             <div class="footer-menu">
-                                <a href="">Home</a>
+                                <a href="index.html">Home</a>
                                 <a href="">Cookies</a>
                                 <a href="">Help</a>
                                 <a href="">FQAs</a>
